--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GOOGLE_REFRESH_TOKEN=1//0g0ZghxIwIs0kCgYIARAAGBASNwF-L9IrV4AXbRGtuhvg_pd0zBBtsxf
 GOOGLE_DRIVE_FILE_ID=1cfMjtOiBuBzpz-EECctyZw4hbT1gQ9iy
 
 
-# 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
+# PAT KEY: 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
