--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ GOOGLE_DRIVE_FILE_ID=1Yi9NXbBw10WqsPqdVZZsLTztOHsp4Qzm
 
 
 # PAT KEY: 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
+# postgresql://inventorybotbase_user:C9v4re3FVz4PoMvxKMMrBMUn1xCiJIA8@dpg-cvh4amaj1k6c738rfbk0-a/inventorybotbase
